# Gyomu_Typescript

./: .env.unittest  .gitignore  MSSQL_Table.sql  MySQL_Table.sql  Postgre_Table.sql  eslint.config.mjs  jest.config.js  jest.sit.config.js  package-lock.json  package.json  pnpm-lock.yaml  readme_db_prisma.md  tsconfig.json  tsconfig.vitest.json  vitest.config.ts  vitest.sit.config.ts
prisma/: schema.prisma  schema.prisma.mysql  schema.prisma.postgre  schema.prisma.sqlserver
src/: aes_encryption.ts  base64.ts  buffer.ts  configurator.ts  dateOperation.ts  dbclient.ts  dbsingleton.ts  dbutil.ts  dictionary.ts  encryption.ts  errors.ts  excel.ts  fileModel.ts  fileOperation.ts  holidays.ts  index.ts  milestone.ts  numberOperation.ts  parameter.ts  result.ts  timer.ts  user.ts  variable.ts
src/__tests__/: aes-encryption.test.ts  base64.test.ts  baseClass.ts  baseDBClass.ts  fileModel.test.ts  fileOperation.test.ts  holidays.test.ts  milestone.test.ts  numberOperation.test.ts  parameter.test.ts  variables.test.ts
src/archive/: abstract.ts  gz.ts  index.ts  tar.ts  zip.ts
src/net/: _ftp.ts  ftp.ts  remoteConnection.ts  sftp.ts
src/platform/: common.ts  index.ts  linux.ts  (+1 more)
test/: shiftjis_sample.txt
test-docker/: docker-compose.yml
tests/: key-256.key  rsa4096  rsa4096.pem  rsa4096.pub  rsa4096.pub.pem  test.html  utf8_sample.txt
tests/source/: README.md  setup.cfg  ユーザー噂.py
tests/source/folder1/: email_sender.py  gyomu_db_model.py
tests/source/folder1/folder 2/: aes_encryption.py
tests/source/folder1/folder 2/フォルダ噂～３/: parameter_access.py  コンフィグ.py
(+21 files in other folders)
