[metadata]
name = gyomu
version = attr: gyomu.__version__
author = Yoshihisa Matsumoto
description = Enterprise operational framework
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = = src
packages = find:
python_requires hai= >=3.8

[options.packages.find]
where = src